--- a/theme/index.less
+++ b/theme/index.less
@@ -79,10 +79,15 @@
             width: 80%;
             display: inline-block;
             color: #c1c1c1;
-            border-top: 1px solid #c1c1c1;
+            border-top: 1.5px solid #c1c1c1;
             font-weight: bold;
             margin: 10px 0 0 10px;
             font-size: 1.2em;
+        }
+
+        .today{
+            border-top: 1.5px solid #337ab7;
+            color: #337ab7;
         }
     }
     .tasklist {
