--- a/theme/index.less
+++ b/theme/index.less
@@ -161,6 +161,28 @@
                 border: 1px solid #f7f7f7;
                 background-color: #f9f9f9;
             }
+
+            input.syncInProgress{
+                font-style: italic;
+            }
+
+            .loader {
+                border: 2px solid #f3f3f3; /* Light grey */
+                border-top: 2px solid #337ab7; /* Blue */
+                border-radius: 50%;
+                width: 16px;
+                height: 16px;
+                margin: 2px;
+                overflow: visible;
+                display: inline-block;
+                float: right;
+                animation: spin 2s linear infinite;
+            }
+
+            @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+            }
         }
 
     }
