--- a/theme/index.less
+++ b/theme/index.less
@@ -4,6 +4,37 @@
 @icon-font-path: "../node_modules/bootstrap/fonts/";
 // customizations
 
+.appload {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    z-index: 9999999999;
+    text-align: center;
+
+    .loader {
+        position: absolute;
+        top: 50%;
+        border: 7px solid #f3f3f3; /* Light grey */
+        border-top: 7px solid #337ab7; /* Blue */
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        margin: 2px;
+        overflow: visible;
+        display: inline-block;
+        float: right;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+}
+
+
+
+
 .sidebar {
     text-align: left;
     background-color: #e6e6e6;
@@ -29,7 +60,7 @@
     }
     .searchinput {
         text-align: center;
-        background-color: #fcfcfc;
+        background-color: #eee;
         ::-webkit-input-placeholder {
             text-align: center;
         }
@@ -46,6 +77,17 @@
             text-align: center; 
         }
     }
+
+    .add-list {
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        padding: 15px;
+        bottom: 0;
+        left: 0;
+        
+    }
+
 }
 
 
