#26 highlight new task entry via css

--- a/theme/index.less
+++ b/theme/index.less
@@ -216,6 +216,16 @@
                     }
                 }
             }
+
+            .new {
+                animation: highlight 3s 1;
+            }
+
+            @keyframes highlight {
+                0% { background-color: #d0e2f2; }
+                100% { background-color: rgba(0,0,0,0); }
+            }
+
             .completed {
                 border: 1px solid #f7f7f7;
                 background-color: #f9f9f9;
