--- a/theme/index.less
+++ b/theme/index.less
@@ -4,21 +4,58 @@
 @icon-font-path: "../node_modules/bootstrap/fonts/";
 // customizations
 
-
-.mobile-topbar {
-    @media (min-width: 768px) {
-       display: none;
-     }
-    display: block;
-    height: 46px;
+.mobile-topbar-wrapper {
     width: 100%;
+    height: auto;
+    overflow: hidden; 
+    @media (min-width: 768px) {
+        display: none;
+    }
+    @media (max-width: 768px) {
+        .addTask {
+            display: block;
+            padding: 10px;
+            width: 100%;
+            height: 46px;
+        }
+    }
+    display: block;
+    box-sizing: border-box;
     position: fixed;
-    background-color: #eee;
-    opacity: 0.98;
-    padding-top: ~"calc(23px - 1.5rem)";
+    .mobile-header {
+        height: 46px;
+        width: 100%;
+        background-color: #eee;
+        opacity: 0.98;
+        padding-top: ~"calc(23px - 1.5rem)";
+        border-bottom: 1px solid #c1c1c1;
+        .mobile-topbar-button {
+            box-sizing: border-box;
+            text-align: center;
+            color: rgba(50, 50, 50, 0.74);
+            font-size: 2rem;
+            height: 38px;
+            padding: 5px 10px 0 10px;
+            margin: 0 10px 0 10px;
+        }
+        .mobile-search-button {
+            float: left;
+        }
+        .mobile-add-button {
+            float: right;
+        }
+        .active {
+            background-color: #fff;
+            color: #c1c1c1;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            border-top: 1px solid #c1c1c1;
+            border-right: 1px solid #c1c1c1;
+            border-bottom: 0;
+            border-left: 1px solid #c1c1c1;
+        }
+    }
 }
-
-
 
 .sidebar {
     text-align: left;
@@ -116,23 +153,19 @@
 
 
 .addTask {
-    box-sizing: border-box;
+    @media (max-width: 768px) {
+        display: none;
+    }
     @media (min-width: 768px) {
         margin-left: 260px;
+        display: block;
+        position: fixed;
     }
+    box-sizing: border-box;
     padding: 10px 20px;
-    position: fixed;
-    overflow: hidden;
     background-color: #fff;
     opacity: 0.95;
-    border-radius: 4px;
     width: ~"calc(100% - 260px)";
-    @media (max-width: 768px) {
-        padding: 10px;
-        width: 100%;
-        top: 46px;
-    }
-
     .form-inline {
         display: flex;
         background-color: #fff;
@@ -177,7 +210,7 @@
 }
 
     .tasklist {
-        padding-top: 70px;
+        padding-top: 100px;
         background-color: #fff;
         width: 100%;
         box-sizing: border-box;
@@ -189,7 +222,7 @@
 
          .datearea {
             width: 100%;
-            padding-top: 30px;
+            padding-top: 0px;
             margin-bottom: 20px;
 
             .day {
