--- a/theme/index.less
+++ b/theme/index.less
@@ -18,6 +18,14 @@
             width: 100%;
             height: 46px;
         }
+        .searchbox {
+            display: block;
+            padding: 10px 10px 20px 10px;
+            width: 100%;
+            height: 46px;
+            background-color: #fff;
+            opacity: 0.95;
+        }
     }
     display: block;
     box-sizing: border-box;
@@ -37,6 +45,10 @@
             height: 38px;
             padding: 5px 10px 0 10px;
             margin: 0 10px 0 10px;
+            border-top: 1px solid #eee;
+            border-right: 1px solid #eee;
+            border-bottom: 0;
+            border-left: 1px solid #eee;
         }
         .mobile-search-button {
             float: left;
