corrected minidatepicker for small viewports

--- a/theme/index.less
+++ b/theme/index.less
@@ -302,11 +302,13 @@
                     font-size: 0.6em;
                     color: #c1c1c1;
                     @media (max-width: 768px) {
-                        -webkit-appearance: textfield;
-                        -moz-appearance: textfield;
+                        -webkit-appearance: none;
+                        -moz-appearance: none;
+                        overflow: visible;
+                        border-radius: 0;
                         display:flex;
                         display:-webkit-flex;
-                        color: #fff;
+                        color: #c1c1c1;
                     }
                 }
             }
